syntax = "proto3";
package edu.cdl.iot.protocol;

message ImportRequest  {
  string project_guid = 1;
  string file_path = 2;
  bool delete_when_complete = 3;
}